objects/pse__Team_Schedule__c.object
<CustomObject>
    <description>Schedule for a team.</description>
    <fields>
        <fullName>pse__Effective_Date__c</fullName>
        <description>The date on which the schedule begins.</description>
        <inlineHelpText>The date on which the schedule begins.</inlineHelpText>
        <label>Effective Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>pse__Notes__c</fullName>
        <description>Notes for the team schedule.</description>
        <inlineHelpText>Notes for the team schedule.</inlineHelpText>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>pse__Send_Schedule__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Send Notifications</description>
        <inlineHelpText>Send Notifications</inlineHelpText>
        <label>Send Notifications</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Status__c</fullName>
        <description>The status of the team schedule.</description>
        <inlineHelpText>The status of the team schedule.</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Assigned</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pse__Team_Schedule_Template__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>A lookup to the Team Schedule Template.</inlineHelpText>
        <label>Team Schedule Template</label>
        <referenceTo>pse__Team_Schedule_Template__c</referenceTo>
        <relationshipLabel>Team Schedules</relationshipLabel>
        <relationshipName>Team_Schedules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Team__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>The team associated with the schedule.</description>
        <inlineHelpText>The team associated with the schedule.</inlineHelpText>
        <label>Team</label>
        <referenceTo>pse__Team__c</referenceTo>
        <relationshipLabel>Team Schedules</relationshipLabel>
        <relationshipName>Team_Schedules</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>Team Schedule</label>
    <listViews>
        <fullName>pse__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>TS-{00000000}</displayFormat>
        <label>Team Schedule Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Team Schedules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>